# CLIWeatherApp

./: .env.example  README.md  pyproject.toml
WeatherApp/: advisor.py  api.py  config.py  errors.py  formatter.py  main.py  models.py  parser.py  ui.py
