[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cliweather"
version = "1.0.0"
description = "AI-powered CLI weather advisor"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "python-dotenv",
    "groq",
]
[project.scripts]
weather = "WeatherApp.main:main"